# FredRenderer

./: CMakeLists.txt  Makefile  README.MD  gmon.out  output.tga
images/: african_head_lighten.tga  skull_lighten.tga  triangle.tga
images/african_head/: african_head_lighten_right.tga  african_head_zbuffer.tga  ortogonal_projection.tga  prespective_projection.tga
images/others/: render.tga
images/scooter/: output.tga
images/skull/: output.tga  outputred.tga  skull.tga  skull_random_colored.tga  skull_uv.tga
include/: matrix.h  model.h  vec2.h  vec3.h
models/scooter/: es.mtl
models/scooter/Dorchester3D.com_es/: es.mtl
src/: main.cpp
